--- a/MangaSocial/Screens/Home/HomeViewController.xib
+++ b/MangaSocial/Screens/Home/HomeViewController.xib
@@ -25,7 +25,9 @@
                         <constraint firstAttribute="height" constant="50" id="zcT-l8-1G5"/>
                     </constraints>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Logout">
+                        <fontDescription key="titleFontDescription" name="Cochin-Italic" family="Cochin" pointSize="12"/>
+                    </buttonConfiguration>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="tr_cornerRadius">
                             <real key="value" value="8"/>
