--- a/MangaSocial/Screens/Auth/Login/LoginViewController.xib
+++ b/MangaSocial/Screens/Auth/Login/LoginViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="MangaSocial" customModuleProvider="target">
             <connections>
                 <outlet property="emailTextField" destination="9k1-fv-hjz" id="5yx-ao-FdN"/>
+                <outlet property="errorEmailView" destination="k2f-E1-bYs" id="Bmy-Dl-1wl"/>
+                <outlet property="errorPasswordView" destination="8yE-96-Wei" id="016-G9-T14"/>
                 <outlet property="forgotPasswordButton" destination="4x8-lA-5hL" id="kM9-hq-OPC"/>
                 <outlet property="loginButton" destination="7HO-0d-SAw" id="Nib-Lb-euQ"/>
                 <outlet property="passwordTextField" destination="NMV-qe-RGr" id="TAD-FI-tBh"/>
@@ -129,15 +131,33 @@
                                 <action selector="changeTextEmail:" destination="-1" eventType="editingChanged" id="wAf-ff-Bwc"/>
                             </connections>
                         </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2f-E1-bYs">
+                            <rect key="frame" x="0.0" y="205" width="363" height="13.666666666666657"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email không hợp lệ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L0J-vK-lRs">
+                                    <rect key="frame" x="4" y="3.9999999999999991" width="359" height="9.6666666666666643"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                    <color key="textColor" systemColor="systemRedColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="L0J-vK-lRs" secondAttribute="trailing" id="ObW-Wx-wC8"/>
+                                <constraint firstAttribute="bottom" secondItem="L0J-vK-lRs" secondAttribute="bottom" id="mFH-7h-nCY"/>
+                                <constraint firstItem="L0J-vK-lRs" firstAttribute="top" secondItem="k2f-E1-bYs" secondAttribute="top" constant="4" id="rm9-1G-9XJ"/>
+                                <constraint firstItem="L0J-vK-lRs" firstAttribute="leading" secondItem="k2f-E1-bYs" secondAttribute="leading" constant="4" id="xYW-6Y-PVN"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hvj-Mx-axI">
-                            <rect key="frame" x="0.0" y="205" width="363" height="8"/>
+                            <rect key="frame" x="0.0" y="218.66666666666669" width="363" height="8"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="8" id="lok-nu-1cZ"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NMV-qe-RGr">
-                            <rect key="frame" x="0.0" y="213" width="363" height="40"/>
+                            <rect key="frame" x="0.0" y="226.66666666666669" width="363" height="40"/>
                             <color key="backgroundColor" name="main.input.bg"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="SXe-X4-gi1"/>
@@ -157,15 +177,33 @@
                                 <action selector="changeTextPassword:" destination="-1" eventType="editingChanged" id="ZMl-wv-ECa"/>
                             </connections>
                         </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8yE-96-Wei">
+                            <rect key="frame" x="0.0" y="266.66666666666669" width="363" height="13.666666666666686"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password không hợp lệ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqi-1N-bzi">
+                                    <rect key="frame" x="4" y="3.9999999999999991" width="359" height="9.6666666666666643"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                    <color key="textColor" systemColor="systemRedColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="uqi-1N-bzi" secondAttribute="trailing" id="ATS-lx-5Sw"/>
+                                <constraint firstAttribute="bottom" secondItem="uqi-1N-bzi" secondAttribute="bottom" id="Fp4-SL-Diz"/>
+                                <constraint firstItem="uqi-1N-bzi" firstAttribute="top" secondItem="8yE-96-Wei" secondAttribute="top" constant="4" id="ObK-B1-Zx5"/>
+                                <constraint firstItem="uqi-1N-bzi" firstAttribute="leading" secondItem="8yE-96-Wei" secondAttribute="leading" constant="4" id="gmz-CY-p54"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r78-7n-R7x">
-                            <rect key="frame" x="0.0" y="253" width="363" height="8"/>
+                            <rect key="frame" x="0.0" y="280.33333333333331" width="363" height="8"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="8" id="Ls4-rz-51z"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7HO-0d-SAw">
-                            <rect key="frame" x="0.0" y="261" width="363" height="40"/>
+                            <rect key="frame" x="0.0" y="288.33333333333331" width="363" height="40"/>
                             <color key="backgroundColor" red="0.5725490196078431" green="0.5725490196078431" blue="0.5725490196078431" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="ICN-VC-j1d"/>
@@ -184,14 +222,14 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRK-J7-a81">
-                            <rect key="frame" x="0.0" y="301" width="363" height="24"/>
+                            <rect key="frame" x="0.0" y="328.33333333333331" width="363" height="24"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="uAZ-Df-sIq"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4x8-lA-5hL">
-                            <rect key="frame" x="0.0" y="325" width="363" height="15"/>
+                            <rect key="frame" x="0.0" y="352.33333333333331" width="363" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="15" id="mKw-RE-Q7c"/>
                             </constraints>
@@ -204,7 +242,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HiD-K6-Yyy">
-                            <rect key="frame" x="0.0" y="340" width="363" height="334"/>
+                            <rect key="frame" x="0.0" y="367.33333333333326" width="363" height="306.66666666666674"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
@@ -262,6 +300,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
